--- a/src/components/Scrollbar.scss
+++ b/src/components/Scrollbar.scss
@@ -5,6 +5,8 @@
         position: relative;
         height: 100%;
         width: 100%;
+        display: flex;
+        flex-direction: column;
 
         > .scrollInner {
             height: 100%;
